--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ gast==0.2.2
 google-auth==1.10.0
 google-auth-oauthlib==0.4.1
 google-pasta==0.1.8
-gunicorn
+gunicorn == 20.0.4
 grpcio==1.26.0
 h5py==2.10.0
 idna==2.8
